--- a/sass/layout/_footer-socials.scss
+++ b/sass/layout/_footer-socials.scss
@@ -1,6 +1,16 @@
 .footer-socials {
-  margin: 0px 93px 0px 0px;
-  align-self: baseline;
+  @media screen and (max-width: 767px) {
+    margin-bottom: 60px;
+  }
+
+  @media screen and (min-width: 768px) {
+    margin: 0;
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin: 0px 93px 0px 0px;
+    align-self: baseline;
+  }
 }
 
 .footer__title {
@@ -9,9 +19,13 @@
   @include font(700, 14px, 16px);
 
   text-transform: uppercase;
-  color: var(--white-text-color);
+  color: var(--third-text-color);
 
   margin-bottom: 20px;
+
+  @media screen and (max-width: 1199px) {
+    text-align: center;
+  }
 }
 
 .footer-socials__link--decor {
