--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -4,22 +4,39 @@
 }
 
 .header__container {
-  @include centeredFlex();
+  @media screen and (min-width: 768px) {
+    @include centeredFlex();
+  }
 }
 
 .header__nav {
-  display: flex;
-  align-items: center;
   margin-left: 0;
   margin-right: 0;
+
+  @media screen and (min-width: 768px) {
+    @include centeredFlex();
+  }
 }
 
 .header__logo {
   @extend %link;
 
-  margin-right: 93px;
-  padding-top: 24px;
-  padding-bottom: 25px;
+  @media screen and (max-width: 767px) {
+    margin: 0;
+    padding: 16px 0px 16px;
+  }
+
+  @media screen and (min-width: 768px) {
+    margin-right: 88px;
+    padding-top: 26px;
+    padding-bottom: 26px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin-right: 93px;
+    padding-top: 24px;
+    padding-bottom: 25px;
+  }
 }
 
 .header__logo--color {
