--- a/sass/base/_section.scss
+++ b/sass/base/_section.scss
@@ -1,4 +1,11 @@
 .section {
-  padding-top: var(--section-padding);
-  padding-bottom: var(--section-padding);
+  @media screen and (max-width: 1199px) {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    padding-top: var(--desktop-section-padding);
+    padding-bottom: var(--desktop-section-padding);
+  }
 }
