--- a/sass/components/_card-set.scss
+++ b/sass/components/_card-set.scss
@@ -1,19 +1,34 @@
 .card-set {
   @extend %list;
-  display: flex;
-  flex-wrap: wrap;
+
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+  }
 }
 
 .card-set--margin {
-  margin-right: calc(-1 * var(--card-set-gap));
-  margin-bottom: calc(-1 * var(--card-set-gap));
+  @media screen and (min-width: 768px) {
+    margin: -15px;
+  }
 }
 
 .card-set__item--margin {
-  flex-basis: calc(100% / 3 - var(--card-set-gap));
+  @media screen and (max-width: 767px) {
+    &:not(:last-child) {
+      margin-bottom: var(--margin);
+    }
+  }
 
-  margin-right: var(--card-set-gap);
-  margin-bottom: var(--card-set-gap);
+  @media screen and (min-width: 768px) {
+    flex-basis: calc(100% / 2 - var(--card-set-gap));
+    margin: 15px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    flex-basis: calc(100% / 3 - var(--card-set-gap));
+    margin: 15px;
+  }
 }
 
 .card-set__link {
@@ -21,6 +36,12 @@
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   display: block;
+
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+  }
 
   &:hover,
   &:focus {
@@ -35,7 +56,17 @@
 }
 
 .card-set__description {
-  padding: 63px 24px;
+  @media screen and (min-width: 480px) {
+    padding: 77px 24px;
+  }
+
+  @media screen and (min-width: 768px) {
+    padding: 49px 24px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    padding: 63px 24px;
+  }
 
   @include font(400, 18px, 28px);
 
@@ -46,6 +77,11 @@
   padding: 20px 24px;
   border: 1px solid #eeeeee;
   border-top: unset;
+
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    flex-grow: 1;
+    margin: 0;
+  }
 }
 
 .card-set__title {
