--- a/sass/components/_checkbox.scss
+++ b/sass/components/_checkbox.scss
@@ -2,17 +2,19 @@
   @include centeredFlex();
 
   margin-bottom: 30px;
-  padding-left: 10px;
-  padding-right: 10px;
+
+  @media screen and (min-width: 1200px) {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
 }
 
 .checkbox__icon {
-  width: 16px;
-  height: 15px;
   margin: 0px 7px 0px 0px;
 
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
   fill: var(--white-text-color);
 
@@ -31,9 +33,15 @@
 .checkbox__label {
   @include centeredFlex();
 
-  @include font(400, 14px, 24px);
-
   color: var(--first-text-color);
+
+  @media screen and (max-width: 1199px) {
+    @include font(400, 12px, 14px);
+  }
+
+  @media screen and (min-width: 1200px) {
+    @include font(400, 14px, 24px);
+  }
 }
 
 .checkbox__policy--decor-link {
