--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -4,23 +4,43 @@
   left: 50%;
   transform: translate(-50%, -50%);
 
-  width: 528px;
   padding: 40px;
 
   background-color: var(--white-text-color);
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+
+  @media screen and (max-width: 479px) {
+    max-width: 320px;
+  }
+
+  @media screen and (max-width: 1199px) {
+    width: 450px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 528px;
+  }
 }
 
 .form__title {
   display: block;
-  margin-bottom: 28px;
 
-  @include font(700, 20px, 23px);
+  @include font(700, 20px, 30px);
   text-align: center;
 
   color: var(--second-text-color);
+
+  @media screen and (max-width: 1199px) {
+    text-align: center;
+    margin-bottom: 12px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    text-align: center;
+    margin-bottom: 28px;
+  }
 }
 
 .form {
@@ -34,17 +54,24 @@
 }
 
 .form__label {
-  display: inline-block;
+  display: block;
   margin-bottom: 4px;
 
   @include font(400, 12px, 14px, 0.01em);
 
   color: var(--first-text-color);
+
+  @media screen and (max-width: 768px) {
+    .form__field:focus-within & {
+      color: var(--akcent-text-color);
+    }
+  }
 }
 
 .form__input {
   width: 100%;
   height: 40px;
+
   padding-left: 42px;
 
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -58,8 +85,7 @@
   outline: none;
   cursor: pointer;
 
-  &:focus-within,
-  &:hover {
+  &:focus-within {
     border-color: var(--akcent-text-color);
   }
 }
@@ -71,8 +97,7 @@
 
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  .form__field:focus-within &,
-  .form__field:hover & {
+  .form__input:focus-within + & {
     fill: var(--akcent-text-color);
   }
 }
