--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -1,25 +1,57 @@
 .clients__title {
-  display: block;
   margin-left: 0;
   margin-right: 0;
-  margin-bottom: 50px;
 
-  @include font(700, 36px, 42px, 0.03em);
   text-align: center;
   color: var(--second-text-color);
+
+  @media screen and (max-width: 1199px) {
+    margin-bottom: var(--margin);
+    @include font(700, 28px, 33px, 0.03em);
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 50px;
+    @include font(700, 36px, 42px, 0.03em);
+  }
 }
 
 .clients__list {
   @extend %list;
   display: flex;
+
+  @media screen and (max-width: 1199px) {
+    flex-wrap: wrap;
+    margin: -15px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    @include centeredFlex();
+  }
 }
 
 .clients__item {
-  width: 170px;
   height: 92px;
 
-  &:not(:last-child) {
-    margin-right: 30px;
+  @media screen and (min-width: 480px) {
+    width: 100%;
+  }
+
+  @media screen and (max-width: 767px) {
+    flex-basis: calc(100% / 2 - var(--margin));
+    margin: 15px;
+  }
+
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    flex-basis: calc(100% / 3 - var(--margin));
+    margin: 15px;
+  }
+  @media screen and (min-width: 1200px) {
+    &:not(:last-child) {
+      margin-right: var(--margin);
+    }
+    margin-left: 0;
+    width: 170px;
   }
 }
 
@@ -44,6 +76,7 @@
 .clients__icon {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
+  width: 100%;
   margin-left: 0;
   margin-right: 0;
   fill: var(--first-icon-color);
