--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -1,31 +1,71 @@
 .features {
-  padding-bottom: 0;
+  @media screen and (min-width: 1200px) {
+    padding-bottom: 0;
+  }
 }
 
 .features__list {
   @extend %list;
-  display: flex;
-  align-items: center;
+
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    display: flex;
+    flex-wrap: wrap;
+    margin: -15px;
+  }
+
+  @media screen and (min-width: 480px) {
+    padding-bottom: 0;
+  }
+
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    align-items: center;
+  }
 }
 
 .features__item {
   margin-left: 0;
   margin-right: 0;
 
-  &:not(:last-child) {
-    margin-right: 30px;
+  @media screen and (max-width: 767px) {
+    &:not(:last-child) {
+      margin-bottom: var(--margin);
+    }
+  }
+
+  @media screen and (min-width: 768px) {
+    flex-basis: calc(100% / 2 - var(--margin));
+    margin: 15px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 0;
+    &:not(:last-child) {
+      margin-right: var(--margin);
+    }
   }
 }
 
 .features__thumb {
-  background-color: var(--secondary-bg-color);
+  background-color: #f5f4fa;
 
   @include centeredFlex();
 
-  width: 270px;
   height: 120px;
   border-radius: 4px;
-  margin-bottom: 30px;
+  margin-bottom: var(--margin);
+
+  @media screen and (min-width: 480px) {
+    max-width: 450px;
+  }
+
+  @media screen and (min-width: 768px) {
+    max-width: 354px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    max-width: 270px;
+  }
 }
 
 .features__icon {
@@ -37,13 +77,19 @@
   margin-bottom: 10px;
 
   @include font(700, 14px, 16px);
-
   text-transform: uppercase;
   color: var(--second-text-color);
+
+  @media screen and (max-width: 767px) {
+    text-align: center;
+  }
 }
 
 .features__text {
-  width: 270px;
-
+  max-width: 270px;
   @include font(400, 14px, 24px);
+
+  @media screen and (min-width: 480px) {
+    max-width: 450px;
+  }
 }
