--- a/sass/layout/_header-contacts.scss
+++ b/sass/layout/_header-contacts.scss
@@ -1,45 +1,93 @@
 .header-contacts {
   @extend %list;
 
-  @include centeredFlex();
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
 
-  margin-right: 0;
-  margin-left: auto;
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+
+    margin-left: auto;
+    padding: 21px 15px 21px 0px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    @include centeredFlex();
+    margin-right: 0;
+    margin-left: auto;
+  }
 }
 
-.header-contacts__item:not(:last-child) {
-  margin-right: 50px;
+.header-contacts__item {
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    margin: 0;
+    &:not(:last-child) {
+      margin-bottom: 10px;
+    }
+  }
+
+  @media screen and (min-width: 1200px) {
+    &:not(:last-child) {
+      margin-right: 50px;
+    }
+  }
 }
 
 .header-contacts__link {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
   @extend %link;
-
   @include centeredFlex();
 
-  padding-top: 32px;
-  padding-bottom: 32px;
-
-  @include font(500, 14px, 16px, 0.02em);
-
-  color: var(--first-text-color);
+  color: var(--first-icon-color);
 
   &:hover,
   &:focus {
     color: var(--akcent-text-color);
+  }
+
+  @media screen and (min-width: 768px) {
+    @include font(500, 12px, 14px, 0.02em);
+  }
+
+  @media screen and (min-width: 1200px) {
+    padding-top: 32px;
+    padding-bottom: 32px;
+    @include font(500, 14px, 16px, 0.02em);
   }
 }
 
 .header-contacts__icon {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-  margin-right: 10px;
-
   fill: currentColor;
 
   .header-contacts__link:hover &,
   .header-contacts__link:focus & {
     fill: currentColor;
+  }
+
+  @media screen and (min-width: 768px) {
+    margin-right: 8px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin-right: 10px;
+  }
+}
+
+.header-contacts__icon--mail {
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    width: 14px;
+    height: 10px;
+  }
+}
+
+.header-contacts__icon--tel {
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    width: 10px;
+    height: 14px;
   }
 }
