--- a/sass/layout/_works.scss
+++ b/sass/layout/_works.scss
@@ -1,3 +1,9 @@
+.works {
+  @media screen and (max-width: 1199px) {
+    display: none;
+  }
+}
+
 .works__title {
   margin-bottom: 50px;
 
@@ -20,7 +26,7 @@
   margin-right: 0;
 
   &:not(:last-child) {
-    margin-right: 30px;
+    margin-right: var(--margin);
   }
 }
 
