--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -10,7 +10,7 @@
   flex-direction: column;
   justify-content: space-between;
   padding: 48px 0px 48px 40px;
-  background-color: var(--main-bg-color);
+  background-color: var(--white-text-color);
 
   transform: translateX(-100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
