--- a/css/main.css
+++ b/css/main.css
@@ -14,14 +14,14 @@
 }
 
 /* -------Ресет стилей списков------ */
-.site-nav__list, .socials-list, .card-set, .header-contacts, .features__list, .works__list, .team__list, .clients__list, .footer-contacts__list, .nav__list {
+.site-nav__list, .socials-list, .card-set, .menu-nav__list, .menu-contacts__list, .menu-socials__list, .header-contacts, .features__list, .works__list, .team__list, .clients__list, .footer-contacts__list, .nav__list {
   margin: 0;
   padding: 0;
   list-style: none;
 }
 
 /* -------Ресет стилей ссылок------ */
-.site-nav__link, .socials__link, .card-set__link, .header__logo, .header-contacts__link, .clients__link, .footer__logo, .footer-contacts__adds, .footer-contacts__mail, .footer-contacts__tel {
+.site-nav__link, .socials__link, .card-set__link, .menu__logo, .menu-nav__link, .menu-contacts__link, .menu-socials__link, .header__logo, .header-contacts__link, .clients__link, .footer__logo, .footer-contacts__adds, .footer-contacts__mail, .footer-contacts__tel {
   text-decoration: none;
   color: currentColor;
 }
@@ -160,11 +160,11 @@ img {
   font-size: 14px;
   line-height: 1.14286;
   letter-spacing: 0.02em;
-  color: var(--secondary-text-color);
+  color: var(--second-text-color);
 }
 
 .site-nav__link:hover, .site-nav__link:focus {
-  color: var(--accent-link-color);
+  color: var(--akcent-text-color);
 }
 
 .site-nav__link--active {
@@ -387,41 +387,6 @@ img {
   fill: var(--akcent-text-color);
 }
 
-.form__button {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.button-close {
-  position: absolute;
-  top: 8px;
-  right: 8px;
-  width: 30px;
-  height: 30px;
-  cursor: pointer;
-}
-
-.button-close--decor {
-  background-color: var(--white-text-color);
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  border-radius: 50%;
-}
-
-.button-close__icon {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.button-close:hover .button-close__icon,
-.button-close:focus .button-close__icon {
-  fill: var(--akcent-text-color);
-}
-
 .comment {
   margin-bottom: 20px;
 }
@@ -530,6 +495,41 @@ img {
 .checkbox__policy--decor-link {
   text-decoration-line: underline;
   color: var(--akcent-text-color);
+}
+
+.form__button {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.button-close {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+}
+
+.button-close--decor {
+  background-color: var(--white-text-color);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+}
+
+.button-close__icon {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.button-close:hover .button-close__icon,
+.button-close:focus .button-close__icon {
+  fill: var(--akcent-text-color);
 }
 
 @media screen and (min-width: 768px) {
@@ -661,6 +661,194 @@ img {
   opacity: 1;
 }
 
+.mobile-menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: 99;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 48px 0px 48px 40px;
+  background-color: var(--white-text-color);
+  transform: translateX(-100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.mobile-menu.is-open {
+  transform: translateX(0);
+}
+
+.menu__logo {
+  margin: 0;
+  padding: 16px 0px 4px 15px;
+}
+
+.menu__logo--color {
+  color: var(--second-text-color);
+}
+
+.menu-toggle {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+  border: none;
+  background-color: var(--white-text-color);
+}
+
+@media screen and (min-width: 768px) {
+  .menu-toggle {
+    display: none;
+  }
+}
+
+.menu-toggle__icon {
+  width: 24px;
+  height: 16px;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.menu-toggle:hover .menu-toggle__icon,
+.menu-toggle:focus .menu-toggle__icon {
+  fill: var(--akcent-text-color);
+}
+
+.menu-nav {
+  margin: 0;
+}
+
+.menu-nav__list {
+  display: flex;
+  flex-direction: column;
+}
+
+.menu-nav__item {
+  margin-left: 0;
+  margin-right: 0;
+}
+
+.menu-nav__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.menu-nav__link {
+  position: relative;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.175;
+  letter-spacing: 0.02em;
+  color: var(--second-text-color);
+}
+
+.menu-nav__link--active {
+  color: var(--akcent-text-color);
+}
+
+.menu-contacts {
+  margin: 0;
+}
+
+.menu-contacts__list {
+  margin-bottom: 64px;
+}
+
+.menu-contacts__tel {
+  margin-bottom: 32px;
+  color: var(--akcent-text-color);
+}
+
+@media screen and (max-width: 479px) {
+  .menu-contacts__tel {
+    font-weight: 500;
+    font-size: 26px;
+    line-height: 1.23077;
+    letter-spacing: 0.02em;
+  }
+}
+
+@media screen and (min-width: 480px) {
+  .menu-contacts__tel {
+    font-weight: 500;
+    font-size: 34px;
+    line-height: 1.17647;
+    letter-spacing: 0.02em;
+  }
+}
+
+.menu-contacts__mail {
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.16667;
+  letter-spacing: 0.02em;
+  color: var(--first-text-color);
+}
+
+.menu-socials__list {
+  display: flex;
+}
+
+@media screen and (max-width: 479px) {
+  .menu-socials__list {
+    flex-wrap: wrap;
+  }
+}
+
+.menu-socials__item {
+  position: relative;
+  margin-left: 0;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22222;
+  letter-spacing: 0.02em;
+  color: var(--akcent-text-color);
+}
+
+@media screen and (min-width: 480px) and (max-width: 767px) {
+  .menu-socials__item:not(:last-child) {
+    margin-right: 20px;
+  }
+  .menu-socials__item:not(:last-child)::after {
+    content: "";
+    position: absolute;
+    width: 22px;
+    top: 50%;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    transform: rotate(90deg);
+  }
+}
+
+@media screen and (max-width: 479px) {
+  .menu-socials__item:nth-child(2n + 1)::after {
+    content: "";
+    position: absolute;
+    width: 22px;
+    top: 50%;
+    left: 31vw;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    transform: rotate(90deg);
+  }
+}
+
+@media screen and (max-width: 479px) {
+  .menu-socials__list--margin {
+    margin-right: -10px;
+    margin-bottom: -10px;
+  }
+}
+
+@media screen and (max-width: 479px) {
+  .menu-socials__item--margin {
+    flex-basis: calc((100% - 2 * 10px) / 2);
+    margin-right: 10px;
+    margin-bottom: 10px;
+  }
+}
+
 .header {
   border-color: var(--white-text-color);
   border-bottom: 1px solid #ececec;
@@ -766,7 +954,7 @@ img {
   display: flex;
   justify-content: center;
   align-items: center;
-  color: var(--first-icon-color);
+  color: var(--first-text-color);
 }
 
 .header-contacts__link:hover, .header-contacts__link:focus {
@@ -836,36 +1024,36 @@ img {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/header-mob-min.jpg);
+  background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/header/header-mob-min.jpg);
 }
 
 @media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
   .hero {
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/header-mob@2x-min.jpg");
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/header/header-mob@2x-min.jpg");
   }
 }
 
 @media screen and (min-width: 480px) {
   .hero {
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/header-tab-min.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/header/header-tab-min.jpg);
   }
 }
 
 @media screen and (min-width: 480px) and (min-device-pixel-ratio: 2), screen and (min-width: 480px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 480px) and (min-resolution: 192dpi), screen and (min-width: 480px) and (min-resolution: 2dppx) {
   .hero {
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/header-tab@2x-min.jpg");
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/header/header-tab@2x-min.jpg");
   }
 }
 
 @media screen and (min-width: 768px) {
   .hero {
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/header-desk-min.jpg);
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/header/header-desk-min.jpg);
   }
 }
 
 @media screen and (min-width: 768px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
   .hero {
-    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/header-desk@2x-min.jpg");
+    background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/header/header-desk@2x-min.jpg");
   }
 }
 
@@ -975,7 +1163,7 @@ img {
 }
 
 .features__thumb {
-  background-color: #f5f4fa;
+  background-color: var(--secondary-bg-color);
   display: flex;
   justify-content: center;
   align-items: center;
