--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -115,6 +115,104 @@
   }
 }
 
+.comment {
+  margin-bottom: 20px;
+
+  @media screen and (max-width: 467px) {
+    margin-bottom: 15px;
+  }
+}
+
+.comment__text {
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  width: 100%;
+  height: 120px;
+  padding: 12px 16px;
+
+  @include font(500, 14px, 24px);
+
+  color: #2e2e2e;
+
+  resize: none;
+
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  outline: none;
+  cursor: pointer;
+
+  &::placeholder {
+    @include font(400, 12px, 14px, 0.01em);
+
+    color: rgba(117, 117, 117, 0.5);
+  }
+
+  &:focus-within {
+    border-color: var(--akcent-text-color);
+  }
+}
+
+@media screen and (max-width: 467px) {
+  .comment__text {
+    height: 85px;
+  }
+}
+
+.checkbox {
+  @include centeredFlex();
+
+  margin-bottom: 30px;
+
+  @media screen and (max-width: 479px) {
+    margin-bottom: 20px;
+  }
+
+  @media screen and (min-width: 1200px) {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+}
+
+.checkbox__icon {
+  margin: 0px 7px 0px 0px;
+
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  fill: var(--white-text-color);
+
+  border: 2px solid var(--second-text-color);
+  border-radius: 2px;
+
+  .checkbox:checked + & {
+    border-color: var(--akcent-text-color);
+    background-color: var(--akcent-text-color);
+    fill: var(--white-text-color);
+
+    background-origin: border-box;
+  }
+}
+
+.checkbox__label {
+  @include centeredFlex();
+
+  color: var(--first-text-color);
+
+  @media screen and (max-width: 1199px) {
+    @include font(400, 12px, 14px);
+  }
+
+  @media screen and (min-width: 1200px) {
+    @include font(400, 14px, 24px);
+  }
+}
+
+.checkbox__policy--decor-link {
+  text-decoration-line: underline;
+
+  color: var(--akcent-text-color);
+}
+
 .form__button {
   display: block;
   margin-left: auto;
