--- a/sass/layout/_features.scss
+++ b/sass/layout/_features.scss
@@ -47,7 +47,7 @@
 }
 
 .features__thumb {
-  background-color: #f5f4fa;
+  background-color: var(--secondary-bg-color);
 
   @include centeredFlex();
 
